# dukol-bot

./: .breakpoints  .replit  main.py  pyproject.toml  readme.md  steam.py
bot/: config.py  main.py  notificator.py  steam.py  web_server.py
