[tool.poetry]
name = "dukol-bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
"discord.py" = "2.2.3"
discord = "^2.2.3"
steam-py = "1.4.0"
bs4 = "^0.0.1"
flake8 = "^6.0.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
mypy = "^1.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
